@@ -7,7 +7,7 @@
    <tr>
     <td id="header" style="color: #ff0000;">
      <div id="top" style="color: #259e00;">
-      <p style="background: url('http://rawgithub.com/images/background.png'); text-decoration: line-through;">Email not displaying correctly? <a href="http://rawgithub.com/view.html" style="color: #f5a100; font-size: 30px; font-weight: bold; text-decoration: underline;" title="View this email in your browser.">View it in your browser</a></p>
+      <p style="background: url('http://rawgit.com/images/background.png'); text-decoration: line-through;">Email not displaying correctly? <a href="http://rawgit.com/view.html" style="color: #f5a100; font-size: 30px; font-weight: bold; text-decoration: underline;" title="View this email in your browser.">View it in your browser</a></p>
      </div>
     </td>
    </tr>
